fix row gap

--- a/SkySmartProjects/18_altay/style.css
+++ b/SkySmartProjects/18_altay/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 120px;
+    row-gap: 120px;
 
     padding-bottom: 120px;
     margin: 0 auto;
